--- a/my-website/src/css/custom.css
+++ b/my-website/src/css/custom.css
@@ -6,25 +6,25 @@
 
 /* You can override the default Infima variables here. */
 :root {
-  --ifm-color-primary: #2e8555;
-  --ifm-color-primary-dark: #29784c;
-  --ifm-color-primary-darker: #277148;
-  --ifm-color-primary-darkest: #205d3b;
-  --ifm-color-primary-light: #33925d;
-  --ifm-color-primary-lighter: #359962;
-  --ifm-color-primary-lightest: #3cad6e;
+  --ifm-color-primary: #778cbb;
+  --ifm-color-primary-dark: #637bb1;
+  --ifm-color-primary-darker: #5872ac;
+  --ifm-color-primary-darkest: #475d8f;
+  --ifm-color-primary-light: #8b9dc5;
+  --ifm-color-primary-lighter: #96a6ca;
+  --ifm-color-primary-lightest: #b4c0da;
   --ifm-code-font-size: 95%;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.1);
 }
 
 /* For readability concerns, you should choose a lighter palette in dark mode. */
 [data-theme='dark'] {
-  --ifm-color-primary: #25c2a0;
-  --ifm-color-primary-dark: #21af90;
-  --ifm-color-primary-darker: #1fa588;
-  --ifm-color-primary-darkest: #1a8870;
-  --ifm-color-primary-light: #29d5b0;
-  --ifm-color-primary-lighter: #32d8b4;
-  --ifm-color-primary-lightest: #4fddbf;
+  --ifm-color-primary: #2561c1;
+  --ifm-color-primary-dark: #2157ae;
+  --ifm-color-primary-darker: #1f52a4;
+  --ifm-color-primary-darkest: #1a4487;
+  --ifm-color-primary-light: #296bd4;
+  --ifm-color-primary-lighter: #3171d8;
+  --ifm-color-primary-lightest: #4e85dd;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
 }
